# aimcp

./: pyproject.toml
.github/workflows/: publish.yml
src/aimcp/: __init__.py  __main__.py
src/aimcp/server/: mcp_server.py
