[project]
name = "aimcp"
version = "0.2.0"
description = "MCP server for distributing AI rules from GitLab repositories to IDEs"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "model-context-protocol", "gitlab", "ai", "tools", "ide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.0",
    "orjson>=3.11.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/aimcp"
Documentation = "https://github.com/yourusername/aimcp#readme"
Repository = "https://github.com/yourusername/aimcp"
Issues = "https://github.com/yourusername/aimcp/issues"

[project.scripts]
aimcp = "aimcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aimcp"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ASYNC", "A", "DTZ", "EXE",
    "FA", "ISC", "ICN", "LOG", "G", "PIE", "T20", "PYI", "PT", "Q",
    "RET", "SIM", "PTH", "TD", "FIX", "PL", "TRY", "FLY", "FAST", "PERF",
    "FURB", "RUF", "S"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
case-sensitive = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/aimcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "types-pyyaml>=6.0.12.20250822",
]
